# elasticsearch_refac

./: README.md  pyproject.toml  run_server.py
app/: main.py
app/di/: container.py
app/keywords/application/dto/: keyword_dto.py
app/keywords/application/services/: keyword_service.py
app/keywords/infrastructure/entities/: entity.py
app/keywords/infrastructure/repositories/: keyword_repository.py  redis_repository.py
core/applications/services/: base_service.py
core/infrastructure/database/: database.py
core/infrastructure/di/: core_container.py
core/infrastructure/entities/: entity.py
core/infrastructure/middleware/: logging.py
core/infrastructure/redis/: client.py
core/infrastructure/repositories/: base_repository.py
core/setting/: settings.py
router/: keyword_router.py
