[tool.poetry]
name = "elasticsearch-refac"
version = "0.1.0"
description = ""
authors = ["dgseo <nohes8509@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
alembic = ">=1.15.2"
fastapi = {extras = ["standard"], version = ">=0.115.12"}
nanoid = ">=2.0.0"
pydantic-settings = ">=2.9.1"
pyjwt = ">=2.10.1"
pyodbc = ">=5.2.0"
sqlalchemy = ">=2.0.40"
pytz = "^2025.2"
redis = "^6.2.0"
dependency-injector = "^4.47.1"
aioodbc = "^0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
